--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 # Ignore Python cache files
 __pycache__/
 *.pyc
+
+# Environment Variables
+.env
+.env.local
+.env.*.local
+
+# Virtual Environment
+venv/
+env/
+ENV/
