--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ astunparse==1.6.3
 beautifulsoup4==4.12.3
 blessed==1.20.0
 blinker==1.8.2
+build==1.2.2.post1
 cachetools==5.5.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -65,9 +66,10 @@ optree==0.12.1
 packaging==24.0
 pandas==2.2.2
 pillow==10.3.0
+pip-tools==7.4.1
 platformdirs==4.2.1
 proto-plus==1.25.0
-protobuf==4.25.5
+protobuf==4.21.5
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
@@ -80,6 +82,7 @@ pylint==3.1.0
 pylint-django==2.5.5
 pylint-plugin-utils==0.8.2
 pyparsing==3.2.1
+pyproject_hooks==1.2.0
 PyQt5==5.15.9
 pyqt5-plugins==5.15.9.2.3
 PyQt5-Qt5==5.15.2
@@ -103,6 +106,7 @@ sqlparse==0.5.0
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
 tensorflow==2.17.0
+tensorflow-intel==2.17.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 tomli==2.0.1
