--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ flatbuffers>=24.3.25
 flyingcircus>=0.1.4.1
 gast>=0.6.0
 gdown>=5.2.0
-google-ai-generativelanguage>=0.6.15
+google-ai-generativelanguage>=0.6.10
 google-api-core>=2.24.0
 google-api-python-client>=2.157.0
 google-auth>=2.37.0
@@ -40,7 +40,7 @@ google-generativeai>=0.8.4
 google-pasta>=0.2.0
 googleapis-common-protos>=1.66.0
 grpcio>=1.69.0
-grpcio-status>=1.69.0
+grpcio-status<1.70.0
 gunicorn>=23.0.0
 h5py>=3.11.0
 httplib2>=0.22.0
@@ -69,7 +69,6 @@ pillow>=10.3.0
 pip-tools>=7.4.1
 platformdirs>=4.2.1
 proto-plus>=1.25.0
-protobuf>=3.20.0,<4.21.0
 psycopg2>=2.9.10
 psycopg2-binary>=2.9.10
 pyasn1>=0.6.1
