--- a/Example.env
+++ b/Example.env
@@ -3,3 +3,10 @@ DB_USER=Lapu_Lapu_Tourism_User
 DB_PASSWORD=123456
 DB_HOST=localhost
 DB_PORT=5432
+
+
+DATABASE_URL=postgresql://tourismlapulapu_postgre_user:d1O32RUvSidsX5Ll5ZX4cMVlb5ZwohZE@dpg-cu8fc10gph6c73cp5240-a.singapore-postgres.render.com/tourismlapulapu_postgre
+
+
+EMAIL_HOST_USER=tourismlapulapu@gmail.com
+EMAIL_HOST_PASSWORD=jllm oijw lfkl zrxf
